--- a/PROJECT 2/main.css
+++ b/PROJECT 2/main.css
@@ -104,10 +104,17 @@ h2 {
 .bar {
     display: flex;
     justify-content: center;
-    margin: 10px;
+    margin-top: 10px;
     padding: 10px;
     background-color: gray;
     color: white;
+}
+
+footer {
+    background-image: url(assets/textures/az_subtle.png);
+    background-color: lightgrey;
+    background-blend-mode: multiply;
+    padding-bottom: 300px;
 }
 
 .nestfooter {
@@ -115,14 +122,56 @@ h2 {
     align-items: center;
     justify-content: flex-start;
     padding: 10px;
+    margin-right: 79%;
 }
 
-.looking {
-    display: flex;
-    justify-content: start;
+
+
+.search {
+    
+    margin-right: 30%;
+    padding: 0px;
+    background-color: white;
+    margin-left: .5%;
+    
+    
 }
 
-.vcd {
+.zoom {
+    width: 5%;
+    padding: 5px;
+}
+
+.leftcolumn {
+    float: left;
+    border: solid red 1px;
+}
+
+.footermiddle {
+    float: left;
+    flex-direction: column;
+    width: 30%;
+    border: solid red 1px;
+}
+
+
+.minigallery {
     display: flex;
-    justify-content: center;
+    flex-flow: row wrap;
+    flex-direction: column;
+}
+
+.minigallery img {
+    padding: 5px;
+    height: 50px;
+    width: 50px;
+}
+
+.pictures {
+    display: flex;
+    flex-direction: column;
+}
+
+body {
+    background-color: lightgray;
 }
