--- a/PROJECT 2/main.css
+++ b/PROJECT 2/main.css
@@ -8,13 +8,18 @@ section {
     justify-content: flex-start;
 }
 
+nav {
+    align-items: center;
+}
+
 .about {
     padding: 10px;
 }
 
 .right {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .social {
@@ -46,12 +51,12 @@ header {
 }
 
 #left-arrow {
-    top: 200px;
+    top: 130px;
     left: -10px;
 }
 
 #right-arrow {
-    top: 200px;
+    top: 130px;
     right: -10px;
 }
 
@@ -114,7 +119,7 @@ footer {
     background-image: url(assets/textures/az_subtle.png);
     background-color: lightgrey;
     background-blend-mode: multiply;
-    padding-bottom: 300px;
+    padding-bottom: 100px;
 }
 
 .nestfooter {
@@ -174,4 +179,8 @@ footer {
 
 body {
     background-color: lightgray;
+}
+
+.viewgallery {
+    border: solid red 1px;
 }
