--- a/PROJECT 2/main.css
+++ b/PROJECT 2/main.css
@@ -34,6 +34,9 @@ nav {
 }
 
 header {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
     background-image: url(https://ucarecdn.com/eb6e85ad-105d-4367-89dd-4766d7ac9d14/-/crop/5100x2870/0,216/-/preview/-/resize/1680x/image.jpg);
     height: 40vh;
     background-size: cover;
@@ -123,7 +126,7 @@ footer {
     background-image: url(assets/textures/az_subtle.png);
     background-color: silver;
     background-blend-mode: multiply;
-    padding-bottom: 100px;
+    padding-bottom: 60px;
 }
 
 .nestfooter {
@@ -205,4 +208,22 @@ body {
 a {
     text-decoration: none;
     color: grey;
+}
+
+.overlay {
+    background-color: black;
+    grid-column-start: 1;
+    grid-column-end: 13;
+    grid-row-start: 11;
+    grid-row-end: 13;
+    opacity: 0.5;
+}
+
+.student {
+    display: grid;
+    grid-column-start: 10;
+    grid-column-end: 13;
+    grid-row-start: 11;
+    grid-row-end: 13;
+    color: white;
 }
