--- a/main.css
+++ b/main.css
@@ -214,7 +214,9 @@ footer {
 
 .pictures {
     display: flex;
-    flex-direction: column;
+    flex-flow: row wrap;
+    width: 500px;
+    justify-content: space-around;
 }
 
 body {
@@ -257,4 +259,5 @@ a {
 
 .viewgallery {
     font-family: 'museo';
+    margin-left: 10px;
 }
